--- a/adm.html
+++ b/adm.html
@@ -38,6 +38,7 @@
                 <table>
                     <thead>
                         <tr>
+                            <th></th>
                             <th>Professor(s)</th>
                             <th>Time</th>
                             <th>Status</th>
@@ -45,76 +46,93 @@
                     </thead>
                     <tbody>
                         <tr>
-                            <td><img src="pics/hm/un headmaster.jpg" alt="">Unidentified Headmaster</td>
+                            <td><img src="pics/hm/un headmaster.jpg" alt=""></td>
+                            <td>Unidentified Headmaster</td>
                             <td>11th century</td>
                             <td rowspan="12">Permanent</td>
                         </tr>
                         <tr>
-                            <td><img src="pics/hm/spore.jpg" alt="">Phyllida Spore</td>
+                            <td><img src="pics/hm/spore.jpg" alt=""></td>
+                            <td>Phyllida Spore</td>
                             <td>pre 1408</td>
                         </tr>
                         <tr>
-                            <td><img src="pics/hm/edessa.jpg" alt="">Edessa Sakndenberg</td>
+                            <td><img src="pics/hm/edessa.jpg" alt=""></td>
+                            <td>Edessa Sakndenberg</td>
                             <td>pre 1503</td>
                         </tr>
                         <tr>
-                            <td><img src="pics/hm/fytherley.jpg" alt="">Fytherley Undercliffe</td>
+                            <td><img src="pics/hm/fytherley.jpg" alt=""></td>
+                            <td>Fytherley Undercliffe</td>
                             <td>pre 1531</td>
                         </tr>
                         <tr>
-                            <td><img src="pics/hm/vindictus.jpg" alt="">Vindictus Viridian</td>
+                            <td><img src="pics/hm/vindictus.jpg" alt=""></td>
+                            <td>Vindictus Viridian</td>
                             <td>pre 1703</td>
                         </tr>
                         <tr>
-                            <td><img src="pics/hm/amrose.jpg" alt="">Amrose Swott</td>
+                            <td><img src="pics/hm/amrose.jpg" alt=""></td>
+                            <td>Amrose Swott</td>
                             <td>pre 1724</td>
                         </tr>
                         <tr>
-                            <td><img src="pics/hm/dilys.jpg" alt="">Dilys Derwent</td>
+                            <td><img src="pics/hm/dilys.jpg" alt=""></td>
+                            <td>Dilys Derwent</td>
                             <td>1741 - 1768</td>
                         </tr>
                         <tr>
-                            <td><img src="pics/hm/un headmaster.jpg" alt="">Unidentified Headmaster</td>
+                            <td><img src="pics/hm/un headmaster.jpg" alt=""></td>
+                            <td>Unidentified Headmaster</td>
                             <td>1792</td>
                         </tr>
                         <tr>
-                            <td><img src="pics/hm/un headmaster.jpg" alt="">Eupraxia Mole</td>
+                            <td><img src="pics/hm/un headmaster.jpg" alt=""></td>
+                            <td>Eupraxia Mole</td>
                             <td>1870s</td>
                         </tr>
                         <tr>
-                            <td><img src="pics/hm/phineas.jpg" alt="">Phineas Nigellus Black</td>
+                            <td><img src="pics/hm/phineas.jpg" alt=""></td>
+                            <td>Phineas Nigellus Black</td>
                             <td>? - 1925</td>
                         </tr>
                         <tr>
-                            <td><img src="pics/hm/armando.jpg" alt="">Armando Dippet</td>
+                            <td><img src="pics/hm/armando.jpg" alt=""></td>
+                            <td>Armando Dippet</td>
                             <td>20th century-c. 1965 to 1971</td>
                         </tr>
                         <tr>
-                            <td><img src="pics/hm/albus.jpg" alt="">Albus Dumbledore</td>
+                            <td><img src="pics/hm/albus.jpg" alt=""></td>
+                            <td>Albus Dumbledore</td>
                             <td>1965 to 1971-June, 1997</td>
                         </tr>
                         <tr>
-                            <td><img src="pics/hm/minerva.jpg" alt="">Minerva Mcgonagall</td>
+                            <td><img src="pics/hm/minerva.jpg" alt=""></td>
+                            <td>Minerva Mcgonagall</td>
                             <td>8 May, 1993 - 30 May, 1993</td>
                             <td>Interim</td>
                         </tr>
                         <tr>
-                            <td><img src="pics/hm/dolores.jpg" alt="">Dolores Umbridge</td>
+                            <td><img src="pics/hm/dolores.jpg" alt=""></td>
+                            <td>Dolores Umbridge</td>
                             <td>April, 1996 - 17 June, 1996</td>
                             <td>Permanent; considered illegitimate and thus shut out</td>
                         </tr>
                         <tr>
-                            <td><img src="pics/hm/minerva.jpg" alt="">Minerva Mcgonagall</td>
+                            <td><img src="pics/hm/minerva.jpg" alt=""></td>
+                            <td>Minerva Mcgonagall</td>
                             <td>June, 1997 - 1 September 1997</td>
                             <td>Interim</td>
                         </tr>
                         <tr>
-                            <td><img src="pics/hm/snape.jpg" alt="">Severus Snape</td>
+                            <td><img src="pics/hm/snape.jpg" alt=""></td>
+                            <td>Severus Snape</td>
                             <td>1 September, 1997 - 2 May, 1998</td>
                             <td>Permanent</td>
                         </tr>
                         <tr>
-                            <td><img src="pics/hm/minerva.jpg" alt="">Minerva Mcgonagall</td>
+                            <td><img src="pics/hm/minerva.jpg" alt=""></td>
+                            <td>Minerva Mcgonagall</td>
                             <td>2 May, 1998 - 21st Century</td>
                             <td>Permanent</td>
                         </tr>
