--- a/home2.html
+++ b/home2.html
@@ -37,7 +37,7 @@
     </div>
     </div>
     <section class="video">
-        <iframe width="80%" height="90%" frameborder="0" src="https://www.youtube.com/embed/xBAeOTHtZVg?controls=0" loop autoplay ></iframe>
+        <iframe width="80%" height="90%" frameborder="0" src="https://www.youtube.com/embed/xBAeOTHtZVg?controls=0&autoplay=5&mute=1" loop autoplay ></iframe>
     </section>
     <section class="about">
         <div class="main">
@@ -92,7 +92,7 @@
                         <div class="desc">
                             <p><b>The Educational Office was an international regulatory body, subject to the International Confederation of Wizards.The eleven long-established and 
                                 prestigious wizarding schools around the world were registered with the Office, and those wishing to know if there was an approved school of magic 
-                                in their region could send an owl to the Educational Office. Educational Office intentions are overseeing wizarding schools around the world.
+                                in their region could send an owl to the Educational Office. 
                             </b></p>
                             <p style="text-align: center;">
                             <a class="button" href="https://harrypotter.fandom.com/wiki/Educational_Office" target="_blank">Further Information</a></p>
