--- a/subject.html
+++ b/subject.html
@@ -19,13 +19,14 @@
             <li><a href="#">ADMINISTRATION</a>
                 <ul>
                     <li><a href="adm.html">Hogwarts Heads</a></li>
-                    <li><a href="">Deputy Heads</a></li>
-                    <li><a href="">Heads of House</a></li>
-                    <li><a href="">Support staff</a></li>
+                    <li><a href="uc.html">Deputy Heads</a></li>
+                    <li><a href="uc.html">Heads of House</a></li>
+                    <li><a href="uc.html">Support staff</a></li>
                 </ul>
             </li>
-            <li><a href="">SUBJECTS</a></li>
+            <li><a href="#">SUBJECTS</a></li>
         </ul>
     </nav>
     </div>
+    
     </body>
