--- a/home2.html
+++ b/home2.html
@@ -37,7 +37,7 @@
     </div>
     </div>
     <section class="video">
-        <iframe width="80%" height="90%" frameborder="0" src="https://www.youtube.com/embed/xBAeOTHtZVg?controls=0&autoplay=5&mute=1" loop autoplay ></iframe>
+        <iframe width="80%" height="90%" frameborder="0" src="https://www.youtube.com/embed/xBAeOTHtZVg?autoplay=5&mute=1" loop autoplay ></iframe>
     </section>
     <section class="about">
         <div class="main">
