--- a/adm.html
+++ b/adm.html
@@ -24,7 +24,7 @@
                     <li><a href="uc.html">Support staff</a></li>
                 </ul>
             </li>
-            <li><a href="uc.html">SUBJECTS</a></li>
+            <li><a href="subject.html">SUBJECTS</a></li>
         </ul>
     </nav>
     </div>
