--- a/subject.html
+++ b/subject.html
@@ -2,7 +2,7 @@
 <head>
     <meta charset="utf-8">
     <title>Administrations | Hogwarts School of Witchcraft and Wizardry</title>
-    <link rel="stylesheet" href="adm.css">
+    <link rel="stylesheet" href="subject.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
@@ -28,5 +28,48 @@
         </ul>
     </nav>
     </div>
-    
+    <section class="video">
+         <div class="main-video"> 
+             <video class="subjects" loop autoplay muted>
+                <source src="vids/potionsclass.mp4" type="video/mp4">
+                <source src="vids/potionsclass.mp4" type="video/ogg">
+                Your browser does not support this spell.
+            </video>
+        </div>
+    </section>
+    <!-- <section class="core-subjects">
+        <div class="row-1">
+            <div class="content-1">
+                <h2>Core Classes</h2>
+                <table>
+                    <tbody>
+                        <tr align="top">
+                            <td>
+                                <dl>
+                                    <dt>Astronomy</dt>
+                                    <dd>Aurora Sinitra</dd>
+                                    <dt>Charms</dt>
+                                    <dd>Filius Flitwick</dd>
+                                    <dt>Dark Arts</dt>
+                                    <dd>Amycus Carrow</dd>
+                                    <dt>Defence Against the Dark Arts</dt>
+                                    <dd>Severus Snape</dd>
+                                    <dt>Flying</dt>
+                                    <dd>Rolanda Hooch</dd>
+                                </dl>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <dl>
+                                    <dt>Flying</dt>
+                                    <dd></dd>
+                                </dl>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </section> -->
     </body>
