--- a/adm.html
+++ b/adm.html
@@ -2,7 +2,7 @@
 <head>
     <meta charset="utf-8">
     <title>Administrations | Hogwarts School of Witchcraft and Wizardry</title>
-    <link rel="stylesheet" href="adm.css">
+    <link rel="stylesheet" href="style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
@@ -10,7 +10,6 @@
         <span id="progress-value">&#x1F815;</span>
     </div>
     <script src="script.js"></script>
-    <div class="page1">
     <nav>
         <div class="logo"><a href="home2.html">HOGWARTS</a></div>
         <ul>
@@ -27,7 +26,6 @@
             <li><a href="subject.html">SUBJECTS</a></li>
         </ul>
     </nav>
-    </div>
     <section class="isi">
         <h1>Hogwarts Administrations</h1>
         <main class="table">
