--- a/home2.html
+++ b/home2.html
@@ -2,7 +2,7 @@
 <head>
     <meta charset="utf-8">
     <title>Hogwarts School of Witchcraft and Wizardry</title>
-    <link rel="stylesheet" href="home2.css">
+    <link rel="stylesheet" href="style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
@@ -10,7 +10,6 @@
     <div id="progress">
         <span id="progress-value">&#x1F815;</span>
     </div>
-    <div class="page1">
     <nav>
         <div class="logo"><a href="#">HOGWARTS</a></div>
         <ul>
@@ -27,9 +26,17 @@
             <li><a href="subject.html">SUBJECTS</a></li>
         </ul>
     </nav>
+    <div class="page1">
     <div class="content">
+        <audio controls autoplay>
+            <source src="audio/herman.ogg" type="audio/ogg">
+            <source src="audio/herman.mp3" type="audio/mpeg">
+            Your browser does not support this spell.
+        </audio>
+        <div class="title">
         <h1>HOGWARTS SCHOOL OF WITCHCRAFT AND WIZARDRY</h1>
         <h3><i>Draco Dormiens Nunquam Titillandus</i></h3>
+        </div>
         <div class="socials">
             <a href="https://www.instagram.com/hogwartslegacy/" target="_blank"><img src="pics/ig.jfif" style="width: 50px; height: 50px;"></a>
             <a href="https://twitter.com/HogwartsLegacy?s=20" target="_blank"><img src="pics/twt.jfif" style="width: 50px; height: 50px;"></a>
@@ -99,5 +106,5 @@
                         </div>
                     </div>
         </div>
-    </div>
+    </div> 
 </body>
