--- a/houses.html
+++ b/houses.html
@@ -2,7 +2,7 @@
 <head>
     <meta charset="utf-8">
     <title>Houses | Hogwarts School of Witchcraft and Wizardry</title>
-    <link rel="stylesheet" href="houses.css">
+    <link rel="stylesheet" href="style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
@@ -11,7 +11,6 @@
         <span id="progress-value">&#x1F815;</span>
     </div>
     <script src="script.js"></script>
-    <div class="page1">
     <nav>
         <div class="logo"><a href="home2.html">HOGWARTS</a></div>
         <ul>
@@ -28,7 +27,6 @@
             <li><a href="subject.html">SUBJECTS</a></li>
         </ul>
     </nav>
-    </div>
     <section id="findor" class="findor">
         <h1>Hogwarts Houses</h1>
         <div class="row-1">
